fun/hello_world/inc/fog.h

typedef int32_t s32;
typedef uint8_t u8;
typedef uint32_t u32;
typedef float f32;
typedef unsigned long long u64;  // We assume these are a thing.
typedef f32 real;  // Type used in vectors.
struct Vec2 {
    union {
        struct {
            real x, y;
        };
        real _[2];
    };
#ifdef __cplusplus
    Vec2 operator-() const { return {-x, -y}; }

    Vec2 operator+(Vec2 other) const { return {other.x + x, y + other.y}; }

    Vec2 operator-(Vec2 other) const { return {x - other.x, y - other.y}; }

    Vec2 operator*(real scaler) const { return {x * scaler, y * scaler}; }

    Vec2 operator/(real scaler) const {
        real divisor = 1.0f / scaler;
        return {x * divisor, y * divisor};
    }

    void operator+=(Vec2 other) {
        x += other.x;
        y += other.y;
    }

    void operator-=(Vec2 other) {
        x -= other.x;
        y -= other.y;
    }

    void operator*=(real scaler) { *this = (*this) * scaler; }

    void operator/=(real scaler) { *this = (*this) / scaler; }

    bool operator==(Vec2 other) {
        return (x - other.x) * (x - other.x) < FLOAT_EQ_MARGIN &&
               (y - other.y) * (y - other.y) < FLOAT_EQ_MARGIN;
    }
#endif
};
struct Vec4 {
    union {
        struct {
            real x, y, z, w;
        };
        real _[4];
    };
#ifdef __cplusplus
    Vec4 operator-() { return {-x, -y, -z, -w}; }

    Vec4 operator+(Vec4 other) {
        return {x + other.x, y + other.y, z + other.z, w + other.w};
    }

    Vec4 operator-(Vec4 other) {
        return {x - other.x, y - other.y, z - other.z, w - other.w};
    }

    Vec4 operator*(real scaler) {
        return {x * scaler, y * scaler, z * scaler, w * scaler};
    }

    Vec4 operator/(real scaler) {
        real divisor = 1.0f / scaler;
        return {x * divisor, y * divisor, z * divisor, w * divisor};
    }

    void operator+=(Vec4 other) {
        x += other.x;
        y += other.y;
        z += other.z;
        w += other.w;
    }

    void operator-=(Vec4 other) {
        x -= other.x;
        y -= other.y;
        z -= other.z;
        w += other.w;
    }

    void operator*=(real scaler) { *this = (*this) * scaler; }

    void operator/=(real scaler) { *this = (*this) / scaler; }

    bool operator==(Vec4 other) {
        return (x - other.x) * (x - other.x) < FLOAT_EQ_MARGIN &&
               (y - other.y) * (y - other.y) < FLOAT_EQ_MARGIN &&
               (z - other.z) * (z - other.z) < FLOAT_EQ_MARGIN &&
               (w - other.w) * (w - other.w) < FLOAT_EQ_MARGIN;
    }
#endif
};
typedef Vec4(*ProgressFuncVec4)(Vec4, f32, Vec4, f32, f32);
typedef u64 AssetID;
typedef f32(*ProgressFuncF32)(f32, f32, f32, f32, f32);
struct Span {
    // TODO(ed): Maybe add different kinds of randomizations.
    f32 min, max;

#ifdef FOG_ENGINE
    f32 random() {
        return random_real(min, max);
    }
#endif
};
struct ParticleSystem {

    u32 num_sprites;
    u32 layer;
    AssetID sprites[MAX_NUM_SUB_SPRITES];

    // Utility
    u32 head;
    u32 tail;
    u32 max_num_particles;
#ifdef FOG_ENGINE
    Particle *particles = nullptr;
    Util::MemoryArena *memory;
#else
    void *particles;
    void *memory;
#endif

    bool relative;
    bool keep_alive;
    bool one_color;
    bool one_alpha;
    bool one_size;
    bool drop_oldest;
    Vec2 position;

    // Spawning
    Span alive_time;

    Span rotation;
    Span angular_velocity;

    Span position_x;
    Span position_y;
    Span velocity_dir;
    Span velocity;
    Span damping;
    Span acceleration_dir;
    Span acceleration;

    Span spawn_size;
    Span spawn_size_deriv;
    Span die_size;
    Span die_size_deriv;

    ProgressFuncF32 progress_func_size;

    Span width;
    Span height;

    Span spawn_red;
    Span spawn_green;
    Span spawn_blue;
    Span spawn_alpha;
    Span spawn_color_deriv;

    Span die_red;
    Span die_green;
    Span die_blue;
    Span die_alpha;
    Span die_color_deriv;

    ProgressFuncVec4 progress_func_color;
};
FOG_IMPORT void fog_renderer_set_window_size(int w, int h);
FOG_IMPORT Vec2 fog_renderer_get_window_size();
FOG_IMPORT void fog_renderer_set_window_title(const char *title);
FOG_IMPORT void fog_renderer_set_fullscreen(bool fullscreen);
FOG_IMPORT void fog_renderer_toggle_fullscreen();
FOG_IMPORT bool fog_renderer_is_fullscreen();
FOG_IMPORT ParticleSystem fog_renderer_create_particle_system(u32 layer, u32 num_particles, Vec2 position);
FOG_IMPORT void fog_renderer_destroy_particle_system(ParticleSystem *system);
FOG_IMPORT void fog_renderer_particle_spawn(ParticleSystem *self, u32 num_particles=1);
FOG_IMPORT void fog_renderer_particle_update(ParticleSystem *self, f32 delta);
FOG_IMPORT void fog_renderer_particle_draw(ParticleSystem *self);
FOG_IMPORT void fog_renderer_particle_clear(ParticleSystem *self);
FOG_IMPORT void fog_renderer_particle_add_sprite(ParticleSystem *self, AssetID sprite);
FOG_IMPORT Vec2 fog_renderer_messure_text(const char *string, f32 size, AssetID font_id);
FOG_IMPORT void fog_renderer_draw_text(const char *string, f32 x, f32 y, f32 size, AssetID font_id, f32 alignment = 0.0, Vec4 color = V4(1, 1, 1, 1), f32 edge = 0.2, bool border = false);
FOG_IMPORT char *fog_util_format(const char *fmt, va_list args);
FOG_IMPORT u8 fog_util_utf8_size(const char *c);
FOG_IMPORT bool fog_util_utf8_is_first_char(const char *c);
FOG_IMPORT bool fog_util_utf8_insert_glyph(char *to, const char *from, u32 length);
FOG_IMPORT char *fog_util_utf8_advance(char *c);
FOG_IMPORT void *fog_util_temporary_bytes(u64 num);
FOG_IMPORT void fog_util_copy_bytes(const void *from, void *to, u64 size);
FOG_IMPORT void fog_util_allow_allocation();
FOG_IMPORT void fog_util_allow_all_allocations();
FOG_IMPORT bool fog_util_begin_tweak_section(const char *name, bool *active);
FOG_IMPORT void fog_util_end_tweak_section(bool *active);
FOG_IMPORT bool fog_util_tweak_s32(const char *name, s32 *value);
FOG_IMPORT bool fog_util_tweak_u32(const char *name, u32 *value);
FOG_IMPORT bool fog_util_tweak_f32(const char *name, f32 *value, f32 modifier=1.0);
FOG_IMPORT bool fog_util_tweak_vec2(const char *name, Vec2 *value, f32 modifier=1.0);
FOG_IMPORT bool fog_util_tweak_span(const char *name, Span *value, f32 modifier=1.0);