game/rutic/src/fog.rs

extern "C" {
    pub fn fog_renderer_set_window_size(w: ::std::os::raw::c_int, h: ::std::os::raw::c_int);
}
extern "C" {
    pub fn fog_renderer_get_window_size() -> Vec2;
}
extern "C" {
    pub fn fog_renderer_set_window_title(title: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn fog_renderer_set_fullscreen(fullscreen: b8);
}
extern "C" {
    pub fn fog_renderer_toggle_fullscreen();
}
extern "C" {
    pub fn fog_renderer_is_fullscreen() -> b8;
}
extern "C" {
    pub fn fog_renderer_create_particle_system(
        layer: u32,
        num_particles: u32,
        position: Vec2,
    ) -> ParticleSystem;
}
extern "C" {
    pub fn fog_renderer_destroy_particle_system(system: *mut ParticleSystem);
}
extern "C" {
    pub fn fog_renderer_particle_spawn(self_: *mut ParticleSystem, num_particles: u32);
}
extern "C" {
    pub fn fog_renderer_particle_update(self_: *mut ParticleSystem, delta: f32);
}
extern "C" {
    pub fn fog_renderer_particle_draw(self_: *mut ParticleSystem);
}
extern "C" {
    pub fn fog_renderer_particle_clear(self_: *mut ParticleSystem);
}
extern "C" {
    pub fn fog_renderer_particle_add_sprite(self_: *mut ParticleSystem, sprite: AssetID);
}
extern "C" {
    pub fn fog_renderer_messure_text(
        string: *const ::std::os::raw::c_char,
        size: f32,
        font_id: AssetID,
    ) -> Vec2;
}
extern "C" {
    pub fn fog_renderer_draw_text(
        string: *const ::std::os::raw::c_char,
        x: f32,
        y: f32,
        size: f32,
        font_id: AssetID,
        alignment: f32,
    );
}
extern "C" {
    pub fn fog_util_format(
        fmt: *const ::std::os::raw::c_char,
        args: *mut __va_list_tag,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn fog_util_utf8_size(c: *const ::std::os::raw::c_char) -> u8;
}
extern "C" {
    pub fn fog_util_utf8_is_first_char(c: *const ::std::os::raw::c_char) -> b8;
}
extern "C" {
    pub fn fog_util_utf8_insert_glyph(
        to: *mut ::std::os::raw::c_char,
        from: *const ::std::os::raw::c_char,
        length: u32,
    ) -> b8;
}
extern "C" {
    pub fn fog_util_utf8_advance(c: *mut ::std::os::raw::c_char) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn fog_util_temporary_bytes(num: u64) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn fog_util_copy_bytes(
        from: *const ::std::os::raw::c_void,
        to: *mut ::std::os::raw::c_void,
        size: u64,
    );
}
extern "C" {
    pub fn fog_util_allow_allocation();
}
extern "C" {
    pub fn fog_util_allow_all_allocations();
}
extern "C" {
    pub fn fog_util_begin_tweak_section(name: *const ::std::os::raw::c_char, active: *mut b8)
        -> b8;
}
extern "C" {
    pub fn fog_util_end_tweak_section(active: *mut b8);
}
extern "C" {
    pub fn fog_util_tweak_b8(name: *const ::std::os::raw::c_char, value: *mut b8) -> b8;
}
extern "C" {
    pub fn fog_util_tweak_s32(name: *const ::std::os::raw::c_char, value: *mut s32) -> b8;
}
extern "C" {
    pub fn fog_util_tweak_u32(name: *const ::std::os::raw::c_char, value: *mut u32) -> b8;
}
extern "C" {
    pub fn fog_util_tweak_f32(
        name: *const ::std::os::raw::c_char,
        value: *mut f32,
        modifier: f32,
    ) -> b8;
}
extern "C" {
    pub fn fog_util_tweak_vec2(
        name: *const ::std::os::raw::c_char,
        value: *mut Vec2,
        modifier: f32,
    ) -> b8;
}
extern "C" {
    pub fn fog_util_tweak_span(
        name: *const ::std::os::raw::c_char,
        value: *mut Span,
        modifier: f32,
    ) -> b8;
}
pub type __builtin_va_list = [__va_list_tag; 1usize];
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __va_list_tag {
    pub gp_offset: ::std::os::raw::c_uint,
    pub fp_offset: ::std::os::raw::c_uint,
    pub overflow_arg_area: *mut ::std::os::raw::c_void,
    pub reg_save_area: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout___va_list_tag() {
    assert_eq!(
        ::std::mem::size_of::<__va_list_tag>(),
        24usize,
        concat!("Size of: ", stringify!(__va_list_tag))
    );
    assert_eq!(
        ::std::mem::align_of::<__va_list_tag>(),
        8usize,
        concat!("Alignment of ", stringify!(__va_list_tag))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).gp_offset as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(gp_offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).fp_offset as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(fp_offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).overflow_arg_area as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(overflow_arg_area)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).reg_save_area as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(reg_save_area)
        )
    );
}
